<resources>
    <string name="app_name">DressMe</string>
    <string name="DressMeTitle">Dress Me</string>
    <string name="FallButton">Fall</string>
    <string name="SpringButton">Spring</string>
    <string name="SummerButton">Summer</string>
    <string name="WinterButton">Winter</string>
    <string name="SeasonPrompt">Pick a season</string>
    <string name="GenerateButton">Generate</string>
    <string name="SendScrapbookButton">Send to scrapbook</string>
    <string name="RegenerateButton">Regenerate</string>
    <string name="drsme">DressMe</string>
    <string name="upload">Upload</string>
    <string name="dress_me">dress me</string>
    <string name="send_to_scrapbook">Send to Scrapbook</string>
    <string name="home">Home</string>
    <string name="closet">Closet</string>
    <string name="scrapbook">Scrapbook</string>
    <string name="upload_screen">Upload Screen</string>
    <string name="takePicture">Take Picture</string>
    <string name="send_to_drawing_board">Send to Drawing Board</string>
    <string name="delete_item">Delete item</string>
    <string name="go_back">Go Back</string>
    <string name="send_back_to_closet">Send Back to Closet</string>
    <string name="donate_item">Donate Item</string>
    <string name="camera_prompt">Cateogorize this item.</string>
    <string name="what_kind_of_item_is_it">What kind of item is it?</string>
    <string name="what_season_is_it_for">What season is it for?</string>
    <string name="done">Done</string>
    <string name="help">help</string>
    <string name="helpText">don\'t know where to begin? start by uploading a photo!</string>
    <string name="helpText1">click on the upload button at the top screen and start taking pictures of your clothing items. make sure these pictures are taken on a blank neutral background. choose what kind of clothing item it is and the season in which you normally wear it. now save!</string>
    <string name="helpText2">after filling up your closet, explore the other features in this app. on the home screen, you can click on \"dress me\" and generate an outfit! navigate to your closet from the bottom menu where you can see all your saved items. from there, you can delete items, send them to the drawing board, or donate them!</string>
    <string name="helpText3">in the drawing board, you can move around the clothing items you sent to create your own outfits. if you love the outfit, send it to your scrapbook. you can navigate to your scrapbook from the bottom menu!</string>
    <string name="helpText4">lastly, don\'t forget to check out the donations tab! if you sent items from your closet to donations, you can view all of it!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Refresh">refresh</string>
    <string name="Donate">Donate</string>
    <string name="would_you_like_to_delete_this_outfit">Would you like to delete this outfit?</string>
    <string name="go_to_drawing_board">Go to Drawing Board</string>
    <string name="no_items_in_drawing_board_yet">No items in Drawing Board yet!</string>
</resources>