<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/helpbackground"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/help"
                android:textSize="60dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@+id/textOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="center"
                android:text="@string/helpText"
                android:textSize="20dp"
                android:textStyle = "bold"
                app:layout_constraintTop_toBottomOf="@+id/help"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="center"
                android:text="@string/helpText1"
                android:textSize="20dp"
                android:textStyle = "bold"
                app:layout_constraintTop_toBottomOf="@+id/textOne"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="center"
                android:text="@string/helpText2"
                android:textSize="20dp"
                android:textStyle = "bold"
                app:layout_constraintTop_toBottomOf="@+id/textTwo"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="center"
                android:text="@string/helpText3"
                android:textSize="20dp"
                android:textStyle = "bold"
                app:layout_constraintTop_toBottomOf="@+id/textThree"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="center"
                android:text="@string/helpText4"
                android:textSize="20dp"
                android:textStyle = "bold"
                app:layout_constraintTop_toBottomOf="@+id/textFour"
                tools:layout_editor_absoluteX="0dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>